# provenance-cli

./: .gitignore  Cargo.toml  README.md  action.yml  build.rs
.github/workflows/: ci.yml  demo.yml  release.yml
demo/: README.md  sample-sbom.cdx.json
demo/policies/: demo-policy.yaml
examples/policies/: contributor-risk.yaml  full-compliance.yaml  ofac-compliance.yaml  repo-health.yaml  supply-chain-compromise.yaml  targeted-risk.yaml
scripts/: release.sh
src/: main.rs
src/api/: client.rs  error.rs  mod.rs  types.rs
src/commands/: check.rs  config_cmd.rs  mod.rs
src/commands/query/: advisory.rs  contributor.rs  mod.rs  package.rs  repo.rs
src/commands/scan/: mod.rs  oci.rs  sbom.rs
src/config/: mod.rs  types.rs
src/oci/: extractor.rs
src/output/: human.rs  json.rs  mod.rs  sarif.rs
src/policy/: conditions.rs  engine.rs  mod.rs  schema.rs  types.rs
src/sbom/: csv.rs  cyclonedx.rs  mod.rs  parser.rs  spdx.rs  types.rs
src/source/: mod.rs  oci_source.rs  sbom_source.rs  traits.rs
tests/fixtures/: cyclonedx.json  cyclonedx.xml  packages.csv  spdx.json  spdx.tv  test-policy.yaml
