[package]
name = "provenance"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Software supply chain intelligence from the command line"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Output formatting
comfy-table = "7"
colored = "2"

# Progress bars
indicatif = "0.17"

# PURL parsing
packageurl = "0.4"

# XML parsing for CycloneDX XML
quick-xml = { version = "0.37", features = ["serialize"] }

# CSV parsing
csv = "1"

# Glob matching for policy conditions
glob = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2"

[profile.release]
strip = true
lto = true
